# automat

./: .coveragerc  .gitignore  .travis.yml  README.md  example.py  mypy.ini  pyproject.toml  setup.py  tox.ini  turnstile.py  typical_example_coffee.py  typical_example_happy.py  typical_example_turnstile.py
.github/workflows/: ci.yml
automat/: __init__.py  __main__.py  _core.py  _discover.py  _introspection.py  _methodical.py  _typical.py  _visualize.py
automat/_test/: test_core.py  test_discover.py  test_methodical.py  test_nothing.py  test_trace.py  test_typical.py  test_visualize.py
benchmark/: test_transitions.py
docs/: Makefile  about.rst  api.rst  conf.py  debugging.md  debugging.rst  index.rst  make.bat  typing.rst  visualize.md  visualize.rst
docs/examples/: automat_example.py  game_goblin_example.py  io_coffee_example.py  io_coffee_example.py.bak  lightswitch.py  turnstile_example.py  turnstile_typical.py
